# dummydf

./: CODEOWNERS  MANIFEST.in  README.md  dummydf.py  mama.txt  setup.cfg  setup.py
.github/workflows/: installl-paramiko.yml
dummydf/: __init__.py  dummydf.py
dummydf/config/: config_dummydf.yml  hola.py
dummydf/test/: test_dummydf.py
