[metadata]
name = dummydf
version = attr: src.VERSION
description = Dataframe generator for testing purposes.
long_description = file: README.md
keywords = one, two
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = mypackage
install_requires = 
    numpy==1.19.4
    pandas==1.2.0
    PyYAML==5.1.2; python_version == 3.7.4
